[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/Sprites/TitleScreen.png" type="Texture" id=1]
[ext_resource path="res://UI/Sprites/StartButton.png" type="Texture" id=2]
[ext_resource path="res://UI/Sprites/DisableTutorials.png" type="Texture" id=3]
[ext_resource path="res://UI/TitleScreen.gd" type="Script" id=4]
[ext_resource path="res://Effects/SceneTransitionRect.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 14 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 63, 2.5 )

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="SceneTransitionRect" parent="." instance=ExtResource( 5 )]

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 289.0
margin_right = 640.0
margin_bottom = 404.0
mouse_filter = 2

[node name="TextureButton" type="TextureButton" parent="CenterContainer"]
margin_left = 256.0
margin_top = 25.0
margin_right = 384.0
margin_bottom = 89.0
texture_normal = ExtResource( 2 )

[node name="CenterContainer2" type="CenterContainer" parent="."]
margin_top = 368.0
margin_right = 639.0
margin_bottom = 447.0
mouse_filter = 2

[node name="Control" type="Control" parent="CenterContainer2"]
margin_left = 319.0
margin_top = 39.0
margin_right = 319.0
margin_bottom = 39.0
mouse_filter = 2

[node name="DisableTutorials" type="Sprite" parent="CenterContainer2/Control"]
texture = ExtResource( 3 )
hframes = 2

[node name="Area2D" type="Area2D" parent="CenterContainer2/Control/DisableTutorials"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterContainer2/Control/DisableTutorials/Area2D"]
position = Vector2( -108, 1 )
shape = SubResource( 1 )

[node name="DropletSpawnLocation" type="Node2D" parent="."]
position = Vector2( 307, 284 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 321, 314.5 )
shape = SubResource( 2 )

[connection signal="pressed" from="CenterContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="mouse_entered" from="CenterContainer2/Control/DisableTutorials/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer2/Control/DisableTutorials/Area2D" to="." method="_on_Area2D_mouse_exited"]
